carbon: Prevent overflow on distribution by project charts

--- a/carbon/theme/layout.module.scss
+++ b/carbon/theme/layout.module.scss
@@ -147,3 +147,7 @@ div.card66percent {
 .zIndexSeven {
   z-index: 7;
 }
+
+.noOverflow {
+  overflow: hidden;
+}
